metadata/force-app/main/default/objects/CustomName_QBBvj__c/CustomName_QBBvj__c.object-meta.xml
<CustomObject>
    <description>Description_QCwxr</description>
    <label>CustomLabel_ZEPdU</label>
    <nameField>
        <label>CustomLabel_ZEPdU</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_ZEPdUs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>