metadata/force-app/main/default/objects/CustomName_QBBvj__c/fields/CustomField_cQepZ__c.field-meta.xml
<CustomField>
    <fullName>CustomField_cQepZ__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldPYeLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>