metadata/force-app/main/default/objects/CustomName_QBBvj__c/fields/CustomField_SqroL__c.field-meta.xml
<CustomField>
    <fullName>CustomField_SqroL__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldjqPrS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>