metadata/force-app/main/default/objects/CustomName_QBBvj__c/fields/CustomField_TqlUi__c.field-meta.xml
<CustomField>
    <fullName>CustomField_TqlUi__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldNVecw</label>
    <length>255</length>
    <type>Text</type>
</CustomField>